# KanoopTorrentD

./: CMakeLists.txt
src/: buildinfo.h.in  kanooptorrentdaemon.cpp  kanooptorrentdaemon.h  main.cpp  settings.cpp  settings.h  torrentcontrolserver.cpp  torrentcontrolserver.h
src/json/: adminbodies.cpp  adminbodies.h  operationresult.cpp  operationresult.h  torrentbodies.cpp  torrentbodies.h
